// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-0",
      "id": "default",
      "offsetBottom": undefined,
      "offsetTop": undefined,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.offsetBottom - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-0",
      "id": "properties.offsetBottom",
      "offsetBottom": 15,
      "offsetTop": undefined,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.offsetTop - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-0",
      "id": "properties.offsetTop",
      "offsetBottom": undefined,
      "offsetTop": 15,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "css-1dcnkry",
      "id": "properties.style",
      "offsetBottom": undefined,
      "offsetTop": undefined,
      "onChange": [Function],
    },
    Object {},
  ],
]
`;
